[tool.poetry]
name = "Advanced Python - Python OOP"
version = "0.1.0"
description = "Advanced Python OOP"
authors = ["Pete DeBiase <pete@debiase.io>"]
license = ""

[tool.poetry.dependencies]
python = "^3.10"
certifi = "*"
chardet = "*"
filestack-python = "*"
fpdf = "*"
idna = "*"
requests = "*"
trafaret = "*"
urllib3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
